--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-validator": "^5.3.0",
     "fb": "^2.0.0",
     "googleapis": "^38.0.0",
+    "jimp": "^0.8.4",
     "jsonwebtoken": "^8.4.0",
     "knex": "^0.15.2",
     "knex-model-wrapper": "^0.3.3",
